some ticket widget updates

--- a/lib/gits_web/live/host_live/edit_event.html.heex
+++ b/lib/gits_web/live/host_live/edit_event.html.heex
@@ -177,7 +177,10 @@
       </div>
 
       <div class="px-2 py-4 pb-8 flex justify-end col-span-full">
-        <button class="h-9 flex px-4 bg-zinc-950 text-zinc-50 items-center rounded-lg">
+        <button
+          class="h-9 flex px-4 bg-zinc-950 text-zinc-50 items-center rounded-lg"
+          onclick="history.back()"
+        >
           <span class="font-semibold text-sm">
             Continue
           </span>
