--- a/lib/gits_web/controllers/auth_html/sign_in.html.heex
+++ b/lib/gits_web/controllers/auth_html/sign_in.html.heex
@@ -1,8 +1,8 @@
-<.header current_path={@conn.request_path} />
-<div class="flex py-40 px-2 gap-20 mx-auto max-w-screen-xl">
-  <div class="max-w-96 w-full">
+<.header current_path={@conn.request_path} current="Sign in" />
+<div class="flex py-20 px-2 gap-20 mx-auto max-w-screen-xl">
+  <div class="max-w-md border p-4 lg:px-8 mx-auto rounded-xl w-full">
     <%= live_render(@conn, GitsWeb.AuthLive) %>
   </div>
-  <div class="hidden lg:flex grow"></div>
+  <!-- <div class="hidden lg:flex grow"></div> -->
 </div>
 <.footer />
