--- a/lib/gits_web/live/host_live/edit_event.html.heex
+++ b/lib/gits_web/live/host_live/edit_event.html.heex
@@ -1,102 +1,75 @@
-<%= if @event_public_id do %>
-  <div class="flex items-center gap-2 p-2">
-    <button onclick="history.back()" class="flex h-9 items-center gap-2 rounded-lg px-2">
-      <.icon name="hero-chevron-left" class="size-5" />
-      <span class="hidden text-sm font-medium lg:inline">Back</span>
-    </button>
+<div class="flex items-center">
+  <%= if assigns[:event]  do %>
+    <h1 class="text-xl font-semibold">Edit event</h1>
+    <div class="flex grow justify-end gap-4">
+      <button
+        phx-click="previous"
+        phx-value-from={@live_action}
+        type="button"
+        class="flex h-9 items-center rounded-lg px-4 text-sm text-zinc-950 hover:bg-zinc-100"
+      >
+        <.icon name="i-lucide-chevron-left" />
+        <span class=" font-semibold">
+          Previous
+        </span>
+      </button>
 
-    <div class="flex gap-2 grow items-center border-l truncate pl-4 text-sm font-medium">
-      <span class="text-zinc-500">Events</span>
-      <.icon name="hero-slash-micro" class="text-zinc-500 shrink-0" />
-      <span class="text-zinc-500 truncate"><%= @event_name %></span>
-      <.icon name="hero-slash-micro" class="shrink-0" />
-      <span class="">Edit event</span>
+      <button
+        phx-click="next"
+        phx-value-from={@live_action}
+        type="button"
+        class="flex h-9 items-center rounded-lg px-4 text-sm text-zinc-950 hover:bg-zinc-100"
+      >
+        <span class=" font-semibold">
+          Next
+        </span>
+        <.icon name="i-lucide-chevron-right" />
+      </button>
     </div>
+  <% else %>
+    <h1 class="text-xl font-semibold">Create an event</h1>
+  <% end %>
+</div>
 
-    <button class="flex size-9 lg:w-auto items-center gap-2 justify-center shrink-0 rounded-lg lg:px-4">
-      <.icon name="hero-megaphone" class="size-5" />
-      <span class="text-sm hidden lg:inline">Help</span>
-    </button>
-  </div>
-<% else %>
-  <div class="flex items-center gap-2 p-2">
-    <.link
-      replace={true}
-      navigate={~p"/hosts/#{@host_handle}/events"}
-      class="flex items-center gap-2 rounded-lg h-9 px-2"
-    >
-      <.icon name="hero-chevron-left" class="size-5" />
-      <span class="text-sm font-medium lg:inline hidden">Back</span>
-    </.link>
-
-    <div class="flex gap-2 grow items-center border-l truncate pl-4 text-sm font-medium">
-      <span class="text-zinc-500">Events</span>
-      <.icon name="hero-slash-micro" class="shrink-0" />
-      <span class="">Create event</span>
+<div class="relative flex gap-2">
+  <div
+    :for={
+      {label, action} <- [
+        {"Event Details", :details},
+        {"Tickets", :tickets}
+      ]
+    }
+    class="group grid grow gap-2 rounded-lg"
+    aria-selected={"#{action == @live_action}"}
+  >
+    <div class="p-1">
+      <div class="h-1 grow bg-zinc-200 group-aria-selected:bg-zinc-800"></div>
     </div>
-
-    <button class="flex size-9 lg:w-auto items-center gap-2 justify-center shrink-0 rounded-lg lg:px-4">
-      <.icon name="hero-megaphone" class="size-5" />
-      <span class="text-sm hidden lg:inline">Help</span>
-    </button>
+    <div class="absolute inset-x-0 top-4 hidden p-1 text-zinc-400 group-aria-selected:inline-flex group-aria-selected:text-zinc-950 lg:static lg:inline-flex">
+      <span class="text-sm font-semibold"><%= label %></span>
+    </div>
   </div>
-<% end %>
+</div>
 
-<div class="grow flex lg:pt-4 lg:flex-row flex-col max-w-screen-lg">
-  <div class="w-full lg:max-w-64 p-2 flex lg:flex-col gap-4 lg:gap-6">
-    <%= if @event_public_id do %>
-      <.wizard_step
-        current={@live_action == :details}
-        href={Routes.host_edit_event_path(@socket, :details, @host_handle, @event_public_id)}
-        complete={true}
-        valid={true}
-        title="Event details"
-      />
-      <.wizard_step
-        :if={false}
-        current={@live_action == :time_and_place}
-        href={
-          Routes.host_edit_event_path(@socket, :time_and_place, @host_handle, @event_public_id)
-        }
-        title="Time & place"
-      />
+<div class="flex grow flex-col lg:flex-row">
+  <div class="mt-4 w-full lg:mt-0">
+    <.event_details :if={@live_action == :details} form={@form} event_id={@event.public_id} />
+    <.tickets
+      :if={@live_action == :tickets}
+      form={@form}
+      socket={@socket}
+      host={@host}
+      event={@event}
+      live_action={@live_action}
+      event_id={@event.public_id}
+      show_create_ticket_modal={@show_create_ticket_modal}
+    />
 
-      <.wizard_step
-        current={@live_action == :tickets}
-        title="Tickets"
-        href={Routes.host_edit_event_path(@socket, :tickets, @host_handle, @event_public_id)}
-      />
-
-      <.wizard_step
-        :if={false}
-        current={@live_action == :feature_graphic}
-        title="Feature graphic"
-        href={~p"/hosts/#{@host_handle}/events/#{@event.public_id}"}
-      />
-      <.wizard_step :if={false} current={@live_action == :tickets} title="Tickets" />
-      <.wizard_step
-        :if={false}
-        current={@live_action == :payout_preferences}
-        title="Payout preferences"
-      />
-    <% else %>
-      <.wizard_step current={@live_action == :details} title="Event details" />
-      <.wizard_step current={@live_action == :time_and_place} title="Time & place" />
-      <.wizard_step current={@live_action == :feature_graphic} title="Feature graphic" />
-      <.wizard_step current={@live_action == :tickets} title="Tickets" />
-      <.wizard_step current={@live_action == :payout_preferences} title="Payout preferences" />
-    <% end %>
-  </div>
-
-  <div class="lg:mt-0 mt-4 w-full">
-    <.event_details :if={@live_action == :details} form={@form} event_id={@event_public_id} />
-    <.time_and_place :if={@live_action == :time_and_place} form={@form} />
-
-    <div :if={@live_action == :tickets}>
+    <div :if={false}>
       <div class="flex p-2">
-        <h1 class="grow font-medium text-lg">Tickets</h1>
+        <h1 class="grow text-lg font-medium">Tickets</h1>
         <button
-          class="inline-flex px-2 rounded-lg h-9 items-center border"
+          class="inline-flex h-9 items-center rounded-lg border px-2"
           phx-click={
             JS.patch(
               Routes.host_edit_event_path(
@@ -112,30 +85,30 @@
           }
         >
           <.icon name="i-lucide-plus" class="text-sm" />
-          <span class="text-sm px-2 font-semibold">New Ticket</span>
+          <span class="px-2 text-sm font-semibold">New Ticket</span>
         </button>
       </div>
 
-      <div class="lg:p-2 space-y-1">
+      <div class="space-y-1 lg:p-2">
         <div class="">
-          <div class="px-4 flex">
-            <span class="text-sm grow max-w-96 text-zinc-500">Name</span>
+          <div class="flex px-4">
+            <span class="max-w-96 grow text-sm text-zinc-500">Name</span>
             <div class="hidden lg:flex">
-              <span class="text-sm max-w-64 text-zinc-500 w-32">Quantity</span>
-              <span class="text-sm max-w-64 text-zinc-500">Price</span>
+              <span class="w-32 max-w-64 text-sm text-zinc-500">Quantity</span>
+              <span class="max-w-64 text-sm text-zinc-500">Price</span>
             </div>
           </div>
         </div>
         <div class="">
-          <div class="border-y lg:border lg:rounded-xl divide-y">
-            <div :for={type <- @ticket_types} class="p-2 flex items-center gap-4">
-              <div class="grow flex flex-wrap gap-2 px-2">
-                <span class="font-medium grow max-w-96 text-sm"><%= type.name %></span>
+          <div class="divide-y border-y lg:rounded-xl lg:border">
+            <div :for={type <- @ticket_types} class="flex items-center gap-4 p-2">
+              <div class="flex grow flex-wrap gap-2 px-2">
+                <span class="max-w-96 grow text-sm font-medium"><%= type.name %></span>
                 <!-- <div>Hello</div> -->
               </div>
 
               <button
-                class="size-9 inline-flex justify-center rounded-lg items-center"
+                class="inline-flex size-9 items-center justify-center rounded-lg"
                 phx-click={
                   JS.patch(
                     Routes.host_edit_event_path(
@@ -154,7 +127,7 @@
               </button>
 
               <button
-                class="size-9 inline-flex justify-center rounded-lg items-center"
+                class="inline-flex size-9 items-center justify-center rounded-lg"
                 phx-click={
                   JS.patch(
                     Routes.host_edit_event_path(
@@ -176,12 +149,12 @@
         </div>
       </div>
 
-      <div class="px-2 py-4 pb-8 flex justify-end col-span-full">
+      <div class="col-span-full flex justify-end px-2 py-4 pb-8">
         <button
-          class="h-9 flex px-4 bg-zinc-950 text-zinc-50 items-center rounded-lg"
+          class="flex h-9 items-center rounded-lg bg-zinc-950 px-4 text-zinc-50"
           onclick="history.back()"
         >
-          <span class="font-semibold text-sm">
+          <span class="text-sm font-semibold">
             Continue
           </span>
         </button>
@@ -191,55 +164,7 @@
 </div>
 
 <.modal
-  :if={@live_action == :tickets}
-  id="create_ticket"
-  show={@show_create_ticket_modal}
-  on_cancel={
-    JS.patch(
-      Routes.host_edit_event_path(@socket, @live_action, @host_handle, @event_public_id),
-      replace: true
-    )
-    |> hide_modal("create_ticket")
-  }
->
-  <div class="grid gap-4">
-    <h3 class="text-lg font-semibold">New Ticket</h3>
-    <.form
-      :let={f}
-      id="create_ticket_form"
-      for={@form}
-      class="grid grow grid-cols-2 gap-6"
-      phx-submit={
-        JS.push("tickets")
-        |> JS.exec("data-cancel", to: "#create_ticket")
-      }
-      }
-      phx-change="validate"
-    >
-      <.inputs_for :let={tf} :if={@show_create_ticket_modal} field={f[:type]}>
-        <label class="col-span-full grid gap-1">
-          <span class="text-sm font-medium">Name</span>
-          <input
-            type="text"
-            name={tf[:name].name}
-            value={tf[:name].value}
-            class="w-full rounded-lg border-zinc-300 px-3 py-2 text-sm"
-          />
-        </label>
-      </.inputs_for>
-      <div class="flex justify-end col-span-full">
-        <button class="h-9 flex px-4 bg-zinc-950 text-zinc-50 items-center rounded-lg">
-          <span class="font-semibold text-sm">
-            <%= if(true, do: "Save", else: "Create event") %>
-          </span>
-        </button>
-      </div>
-    </.form>
-  </div>
-</.modal>
-
-<.modal
-  :if={@live_action == :tickets}
+  :if={@live_action == :ticketss}
   id="edit_ticket"
   show={@show_edit_ticket_modal}
   on_cancel={
@@ -261,7 +186,6 @@
         JS.push("tickets")
         |> JS.exec("data-cancel", to: "#edit_ticket")
       }
-      }
       phx-change="validate"
     >
       <.inputs_for :let={tf} :if={@show_edit_ticket_modal} field={f[:type]}>
@@ -275,9 +199,9 @@
           />
         </label>
       </.inputs_for>
-      <div class="flex justify-end col-span-full">
-        <button class="h-9 flex px-4 bg-zinc-950 text-zinc-50 items-center rounded-lg">
-          <span class="font-semibold text-sm">
+      <div class="col-span-full flex justify-end">
+        <button class="flex h-9 items-center rounded-lg bg-zinc-950 px-4 text-zinc-50">
+          <span class="text-sm font-semibold">
             <%= if(true, do: "Save", else: "Create event") %>
           </span>
         </button>
@@ -287,7 +211,7 @@
 </.modal>
 
 <.modal
-  :if={@live_action == :tickets}
+  :if={@live_action == :ticketss}
   id="archive_ticket"
   show={@show_archive_ticket_modal}
   on_cancel={
@@ -309,13 +233,12 @@
         JS.push("tickets")
         |> JS.exec("data-cancel", to: "#archive_ticket")
       }
-      }
       phx-change="validate"
     >
       <.inputs_for :let={tf} :if={@show_archive_ticket_modal} field={f[:type]}></.inputs_for>
-      <div class="flex justify-end col-span-full">
-        <button class="h-9 flex px-4 bg-zinc-950 text-zinc-50 items-center rounded-lg">
-          <span class="font-semibold text-sm">
+      <div class="col-span-full flex justify-end">
+        <button class="flex h-9 items-center rounded-lg bg-zinc-950 px-4 text-zinc-50">
+          <span class="text-sm font-semibold">
             <%= if(true, do: "Save", else: "Create event") %>
           </span>
         </button>
