--- a/lib/gits_web/live/host_live/edit_event_templates/tickets.html.heex
+++ b/lib/gits_web/live/host_live/edit_event_templates/tickets.html.heex
@@ -1,10 +1,92 @@
 <%= if Enum.any?(@event.ticket_types) do %>
+  <div class="grid lg:grid-cols-4 items-start gap-4">
+    <div :for={ticket_type <- @event.ticket_types} class="grid gap-2 rounded-xl border p-4">
+      <div class="flex justify-between overflow-hidden gap-4">
+        <span class="text-lg font-semibold truncate"><%= ticket_type.name %></span>
+        <span class="text-lg font-semibold shrink-0">R <%= "1 000.00" %></span>
+      </div>
+      <span class="text-sm text-zinc-500">Limited early bird tickets</span>
+      <span class="text-sm text-zinc-800">Quantity: 10</span>
+      <div class="flex justify-end gap-4">
+        <button
+          type="button"
+          phx-click={
+            JS.patch(
+              Routes.host_edit_event_path(
+                @socket,
+                @live_action,
+                @host.handle,
+                @event.public_id,
+                %{modal: :ticket, edit: ticket_type.id}
+              ),
+              replace: true
+            )
+            |> show_modal("edit_ticket")
+          }
+          class="flex h-9 items-center gap-1 rounded-lg px-4 text-sm text-zinc-950 hover:bg-zinc-100"
+        >
+          <.icon name="i-lucide-square-pen" />
+          <span class=" font-semibold">
+            Edit
+          </span>
+        </button>
+
+        <button
+          type="button"
+          phx-click={
+            JS.patch(
+              Routes.host_edit_event_path(
+                @socket,
+                @live_action,
+                @host.handle,
+                @event.public_id,
+                %{modal: :ticket, archive: ticket_type.id}
+              ),
+              replace: true
+            )
+            |> show_modal("archive_ticket")
+          }
+          class="flex h-9 items-center hover:text-red-600 gap-1 rounded-lg px-4 text-sm text-zinc-950 hover:bg-red-50"
+        >
+          <.icon name="i-lucide-trash" />
+          <span class=" font-semibold">
+            Delete
+          </span>
+        </button>
+      </div>
+    </div>
+    <div class="grid border gap-4 place-items-start rounded-xl p-4">
+      <h2 class="text-sm font-semibold text-zinc-700">Add more tickets</h2>
+      <span class="text-sm text-zinc-500">
+        You can add as many tickets types as you need for your event.
+      </span>
+      <button
+        phx-click={
+          JS.patch(
+            Routes.host_edit_event_path(
+              @socket,
+              @live_action,
+              @host.handle,
+              @event.public_id,
+              %{modal: :ticket, create: nil}
+            ),
+            replace: true
+          )
+          |> show_modal("create_ticket")
+        }
+        class="inline-flex h-9 items-center gap-1 rounded-lg hover:bg-zinc-950 px-4 text-sm hover:text-zinc-50 bg-zinc-100"
+      >
+        <.icon name="i-lucide-ticket-plus" />
+        <span class="font-semibold">Add ticket</span>
+      </button>
+    </div>
+  </div>
 <% else %>
-  <div class="grid items-center place-items-center gap-2 justify-center pt-20">
-    <div class="p-4 text-zinc-500 rounded-lg bg-zinc-100 flex">
+  <div class="grid place-items-center items-center justify-center gap-2 pt-20">
+    <div class="flex rounded-lg bg-zinc-100 p-4 text-zinc-500">
       <.icon name="i-lucide-ticket" />
     </div>
-    <h2 class="text-zinc-700 font-semibold text-sm">Set up your tickets</h2>
+    <h2 class="text-sm font-semibold text-zinc-700">Set up your tickets</h2>
     <span class="text-sm text-zinc-500">
       You're almost there! Now let's add tickets for this event.
     </span>
@@ -16,80 +98,19 @@
             @live_action,
             @host.handle,
             @event.public_id,
-            %{modal: :ticket, id: nil}
+            %{modal: :ticket, create: nil}
           ),
           replace: true
         )
         |> show_modal("create_ticket")
       }
-      class="h-9 gap-1 bg-zinc-950 rounded-lg inline-flex items-center text-white px-4 text-sm"
+      class="inline-flex h-9 items-center gap-1 rounded-lg bg-zinc-950 px-4 text-sm text-white"
     >
       <.icon name="i-lucide-ticket-plus" />
       <span class="font-semibold">Add ticket</span>
     </button>
   </div>
 <% end %>
-<div>
-  <div :if={false} class="space-y-1 lg:p-2">
-    <div class="">
-      <div class="flex px-4">
-        <span class="max-w-96 grow text-sm text-zinc-500">Name</span>
-        <div class="hidden lg:flex">
-          <span class="w-32 max-w-64 text-sm text-zinc-500">Quantity</span>
-          <span class="max-w-64 text-sm text-zinc-500">Price</span>
-        </div>
-      </div>
-    </div>
-    <div class="">
-      <div class="divide-y border-y lg:rounded-xl lg:border">
-        <div :for={type <- @ticket_types} class="flex items-center gap-4 p-2">
-          <div class="flex grow flex-wrap gap-2 px-2">
-            <span class="max-w-96 grow text-sm font-medium"><%= type.name %></span>
-            <!-- <div>Hello</div> -->
-          </div>
-
-          <button
-            class="inline-flex size-9 items-center justify-center rounded-lg"
-            phx-click={
-              JS.patch(
-                Routes.host_edit_event_path(
-                  @socket,
-                  @live_action,
-                  @host_handle,
-                  @event_public_id,
-                  %{archive: :ticket, id: type.id}
-                ),
-                replace: true
-              )
-              |> show_modal("archive_ticket")
-            }
-          >
-            <.icon name="i-lucide-trash" class="text-sm" />
-          </button>
-
-          <button
-            class="inline-flex size-9 items-center justify-center rounded-lg"
-            phx-click={
-              JS.patch(
-                Routes.host_edit_event_path(
-                  @socket,
-                  @live_action,
-                  @host_handle,
-                  @event_public_id,
-                  %{edit: :ticket, id: type.id}
-                ),
-                replace: true
-              )
-              |> show_modal("edit_ticket")
-            }
-          >
-            <.icon name="i-lucide-square-pen" class="text-sm" />
-          </button>
-        </div>
-      </div>
-    </div>
-  </div>
-</div>
 
 <.modal
   id="create_ticket"
@@ -130,6 +151,88 @@
         <button class="flex h-9 items-center rounded-lg bg-zinc-950 px-4 text-zinc-50">
           <span class="text-sm font-semibold">
             Save
+          </span>
+        </button>
+      </div>
+    </.form>
+  </div>
+</.modal>
+
+<.modal
+  id="edit_ticket"
+  show={@show_edit_ticket_modal}
+  on_cancel={
+    JS.patch(
+      Routes.host_edit_event_path(@socket, @live_action, @host.handle, @event.public_id),
+      replace: true
+    )
+    |> hide_modal("edit_ticket")
+  }
+>
+  <div class="grid gap-4">
+    <h3 class="text-lg font-semibold">Edit Ticket</h3>
+    <.form
+      :let={f}
+      id="edit_ticket_form"
+      for={@form}
+      class="grid grow grid-cols-2 gap-6"
+      phx-submit={
+        JS.push("tickets")
+        |> JS.exec("data-cancel", to: "#edit_ticket")
+      }
+      phx-change="validate"
+    >
+      <.inputs_for :let={tf} :if={@show_edit_ticket_modal} field={f[:type]}>
+        <label class="col-span-full grid gap-1">
+          <span class="text-sm font-medium">Name</span>
+          <input
+            type="text"
+            name={tf[:name].name}
+            value={tf[:name].value}
+            class="w-full rounded-lg border-zinc-300 px-3 py-2 text-sm"
+          />
+        </label>
+      </.inputs_for>
+      <div class="col-span-full flex justify-end">
+        <button class="flex h-9 items-center rounded-lg bg-zinc-950 px-4 text-zinc-50">
+          <span class="text-sm font-semibold">
+            <%= if(true, do: "Save", else: "Create event") %>
+          </span>
+        </button>
+      </div>
+    </.form>
+  </div>
+</.modal>
+
+<.modal
+  id="archive_ticket"
+  show={@show_archive_ticket_modal}
+  on_cancel={
+    JS.patch(
+      Routes.host_edit_event_path(@socket, @live_action, @host.handle, @event.public_id),
+      replace: true
+    )
+    |> hide_modal("archive_ticket")
+  }
+>
+  <div class="grid gap-4">
+    <h3 class="text-lg font-semibold">Archive Ticket</h3>
+    <.form
+      :let={f}
+      id="archive_ticket_form"
+      for={@form}
+      class="grid grow grid-cols-2 gap-6"
+      phx-submit={
+        JS.push("tickets")
+        |> JS.exec("data-cancel", to: "#archive_ticket")
+      }
+      phx-change="validate"
+    >
+      <.inputs_for :if={@show_archive_ticket_modal} field={f[:type]}></.inputs_for>
+      <div class="col-span-full flex justify-end">
+        <button class="flex h-9 items-center rounded-lg bg-zinc-950 px-4 text-zinc-50">
+          <span class="text-sm font-semibold">
+            Yes, Archive
           </span>
         </button>
       </div>
