--- a/lib/gits_web/live/host_live/view_event.html.heex
+++ b/lib/gits_web/live/host_live/view_event.html.heex
@@ -18,17 +18,17 @@
           |> String.upcase() %>
         </span>
       </div>
-      <span :if={false} class="font-semibold hidden lg:inline truncate"><%= @host.name %></span>
+      <span :if={false} class="hidden truncate font-semibold lg:inline"><%= @host.name %></span>
       <span class="hidden truncate font-semibold lg:inline">Treehouse Inc</span>
       <.icon name="i-lucide-chevrons-up-down" class="size-4 shrink-0 text-zinc-400" />
     </div>
     <span class="text-xs font-semibold text-zinc-400">/</span>
-    <.link
-      navigate={~p"/hosts/#{@host.handle}/events"}
-      class="flex h-9 items-center rounded-lg px-1 text-sm font-medium truncate text-zinc-500 hover:bg-zinc-100 hover:text-zinc-950"
+    <button
+      onclick="history.back()"
+      class="flex h-9 items-center truncate rounded-lg px-1 text-sm font-medium text-zinc-500 hover:bg-zinc-100 hover:text-zinc-950"
     >
       <span>Events</span>
-    </.link>
+    </button>
     <span class="text-xs font-semibold text-zinc-400">/</span>
     <div class="flex h-9 items-center truncate rounded-lg px-1 text-sm font-medium">
       <span class="truncate"><%= @event_name %></span>
@@ -36,7 +36,7 @@
   </div>
 </div>
 
-<div class="flex flex-col gap-4 p-2 lg:flex-row">
+<div class="flex flex-col gap-4 p-2 lg:flex-row lg:gap-8">
   <div class="grid w-full gap-4 rounded-xl border p-4 lg:max-w-96">
     <div :if={false} class="flex justify-end">
       <.link
@@ -67,7 +67,7 @@
           )
           |> show_modal("publish-event")
         }
-        class="flex bg-zinc-950 text-zinc-50 h-9 shrink-0 grow items-center justify-center gap-2 rounded-lg hover:bg-zinc-800 lg:w-auto lg:px-4"
+        class="flex h-9 shrink-0 grow items-center justify-center gap-2 rounded-lg bg-zinc-950 text-zinc-50 hover:bg-zinc-800 lg:w-auto lg:px-4"
       >
         <.icon name="hero-rocket-launch" class="size-5" />
         <span class="text-sm font-semibold">Publish</span>
@@ -125,11 +125,11 @@
   }
 >
   <div :if={@event_published?} class="grid gap-4">
-    <div class="flex gap-4 items-center">
+    <div class="flex items-center gap-4">
       <.icon name="hero-check-circle" class="text-green-600" />
       <h3 class="text-lg font-semibold">Event published</h3>
     </div>
-    <div class="text-zinc-700 text-sm space-y-2">
+    <div class="space-y-2 text-sm text-zinc-700">
       <p>
         Congratulations, your event has been successfully published. It's now live for everyone to see!
       </p>
@@ -181,7 +181,7 @@
   id="archive-event"
   show={@show_archive_modal}
   on_cancel={
-    JS.patch(Routes.host_view_event_path(@socket, @live_action, @host_handle, @event.public_id),
+    JS.patch(Routes.host_view_event_path(@socket, @live_action, @host.handle, @event.public_id),
       replace: true
     )
   }
