--- a/lib/gits_web/live/host_live/view_event.html.heex
+++ b/lib/gits_web/live/host_live/view_event.html.heex
@@ -18,8 +18,7 @@
           |> String.upcase() %>
         </span>
       </div>
-      <span :if={false} class="hidden truncate font-semibold lg:inline"><%= @host.name %></span>
-      <span class="hidden truncate font-semibold lg:inline">Treehouse Inc</span>
+      <span class="hidden truncate font-semibold lg:inline"><%= @host.name %></span>
       <.icon name="i-lucide-chevrons-up-down" class="size-4 shrink-0 text-zinc-400" />
     </div>
     <span class="text-xs font-semibold text-zinc-400">/</span>
@@ -37,72 +36,88 @@
 </div>
 
 <div class="flex flex-col gap-4 p-2 lg:flex-row lg:gap-8">
-  <div class="grid w-full gap-4 rounded-xl border p-4 lg:max-w-96">
-    <div :if={false} class="flex justify-end">
-      <.link
-        target="_blank"
-        class="flex rounded-lg"
-        navigate={Routes.storefront_event_listing_path(@socket, :index, @event.public_id)}
-      >
-        <span class="sr-only">Open url</span>
-        <.icon name="hero-link-mini" />
-      </.link>
-    </div>
-    <div class="flex items-start gap-2">
-      <div class="aspect-[3/2] w-20 shrink-0 rounded-md bg-zinc-200"></div>
-      <div>
-        <span class="line-clamp-3 font-semibold">
-          <%= @event_name %>
-        </span>
+  <div class="grid w-full rounded-xl border divide-y lg:max-w-96">
+    <div class="grid p-4 gap-4">
+      <div class="flex items-start gap-2">
+        <div class="aspect-[3/2] w-20 shrink-0 rounded-md bg-zinc-200"></div>
+        <div class="grow">
+          <span class="line-clamp-3 inline-flex gap-1 font-semibold">
+            <%= @event_name %>
+          </span>
+          <div class="w-full flex justify-end">
+            <.link
+              target="_blank"
+              class="flex rounded-lg text-zinc-500 hover:text-zinc-950"
+              navigate={Routes.storefront_event_listing_path(@socket, :index, @event.public_id)}
+            >
+              <span class="sr-only">Open url</span>
+              <.icon name="hero-link-mini" />
+            </.link>
+          </div>
+        </div>
+      </div>
+      <div class="flex gap-4">
+        <button
+          :if={not @event.published?}
+          phx-click={
+            JS.patch(
+              Routes.host_view_event_path(@socket, @live_action, @host_handle, @event.public_id) <>
+                "?publish=#{@event.public_id}",
+              replace: true
+            )
+            |> show_modal("publish-event")
+          }
+          class="h-9 gap-1 bg-zinc-950 rounded-lg inline-flex items-center text-white px-4 text-sm"
+        >
+          <.icon name="i-lucide-rocket" />
+          <span class="font-semibold">Publish</span>
+        </button>
+
+        <button
+          phx-click={
+            JS.navigate(
+              Routes.host_edit_event_path(@socket, :details, @host_handle, @event.public_id)
+            )
+          }
+          class="h-9 border gap-1 rounded-lg inline-flex items-center text-zinc-950 px-4 text-sm"
+        >
+          <span class="font-semibold">Edit</span>
+        </button>
+
+        <button
+          phx-click={
+            JS.patch(
+              Routes.host_view_event_path(
+                @socket,
+                @live_action,
+                @host_handle,
+                @event.public_id,
+                %{
+                  archive: @event.public_id
+                }
+              ),
+              replace: true
+            )
+            |> show_modal("archive-event")
+          }
+          class="h-9 border gap-1 rounded-lg inline-flex items-center text-red-500 px-4 text-sm"
+        >
+          <span class="font-semibold">Archive</span>
+        </button>
       </div>
     </div>
-    <div class="flex justify-end gap-4">
-      <button
-        :if={not @event.published?}
-        phx-click={
-          JS.patch(
-            Routes.host_view_event_path(@socket, @live_action, @host_handle, @event.public_id) <>
-              "?publish=#{@event.public_id}",
-            replace: true
-          )
-          |> show_modal("publish-event")
-        }
-        class="flex h-9 shrink-0 grow items-center justify-center gap-2 rounded-lg bg-zinc-950 text-zinc-50 hover:bg-zinc-800 lg:w-auto lg:px-4"
+    <div class="p-4 grid grid-cols-3 divide-x">
+      <div
+        :for={{label, unit} <- [{"Unique views", "0"}, {"Total orders", "0"}, {"Attendees", "0"}]}
+        class="grid pl-2 first:pl-0"
       >
-        <.icon name="hero-rocket-launch" class="size-5" />
-        <span class="text-sm font-semibold">Publish</span>
-      </button>
-
-      <button
-        phx-click={
-          JS.navigate(
-            Routes.host_edit_event_path(@socket, :details, @host_handle, @event.public_id)
-          )
-        }
-        class="flex size-9 shrink-0 items-center justify-center gap-2 rounded-lg"
-      >
-        <.icon name="i-lucide-square-pen" class="text-sm" />
-        <span class="sr-only">Edit</span>
-      </button>
-      <button
-        phx-click={
-          JS.patch(
-            Routes.host_view_event_path(@socket, @live_action, @host_handle, @event.public_id) <>
-              "?archive=#{@event.public_id}",
-            replace: true
-          )
-          |> show_modal("archive-event")
-        }
-        class="group flex size-9 shrink-0 items-center justify-center gap-2 rounded-lg"
-      >
-        <.icon name="i-lucide-trash" class="size-5 group-hover:text-red-600" />
-        <span class="sr-only">Archive</span>
-      </button>
+        <span class="text-xs font-medium text-zinc-600"><%= label %></span>
+        <span class="text-xl font-medium"><%= unit %></span>
+      </div>
     </div>
   </div>
   <div class="grow space-y-4">
     <div class="flex items-center gap-8 border-b-2 border-zinc-100">
-      <!-- <span class="text-sm text-zinc-400 p-2">Jump To:</span> -->
       <.link
         :for={i <- navigation_items}
         patch={i.href}
