--- a/lib/gits_web/live/host_live/view_event.html.heex
+++ b/lib/gits_web/live/host_live/view_event.html.heex
@@ -30,7 +30,7 @@
     </button>
     <span class="text-xs font-semibold text-zinc-400">/</span>
     <div class="flex h-9 items-center truncate rounded-lg px-1 text-sm font-medium">
-      <span class="truncate"><%= @event_name %></span>
+      <span class="truncate"><%= @event.name %></span>
     </div>
   </div>
 </div>
@@ -42,13 +42,13 @@
         <div class="aspect-[3/2] w-20 shrink-0 rounded-md bg-zinc-200"></div>
         <div class="grow">
           <span class="line-clamp-3 inline-flex gap-1 font-semibold">
-            <%= @event_name %>
+            <%= @event.name %>
           </span>
           <div class="w-full flex justify-end">
             <.link
               target="_blank"
               class="flex rounded-lg text-zinc-500 hover:text-zinc-950"
-              navigate={Routes.storefront_event_listing_path(@socket, :index, @event.public_id)}
+              href={Routes.storefront_event_listing_path(@socket, :index, @event.public_id)}
             >
               <span class="sr-only">Open url</span>
               <.icon name="hero-link-mini" />
@@ -61,8 +61,13 @@
           :if={not @event.published?}
           phx-click={
             JS.patch(
-              Routes.host_view_event_path(@socket, @live_action, @host_handle, @event.public_id) <>
-                "?publish=#{@event.public_id}",
+              Routes.host_view_event_path(
+                @socket,
+                @live_action,
+                @host.handle,
+                @event.public_id,
+                %{publish: @event.public_id}
+              ),
               replace: true
             )
             |> show_modal("publish-event")
