--- a/lib/gits_web/controllers/auth_html/sign_in.html.heex
+++ b/lib/gits_web/controllers/auth_html/sign_in.html.heex
@@ -1,5 +1,4 @@
 <.header muted={true} />
-<div class="max-w-md min-h-[calc(100dvh-10rem)] pt-40 p-4 lg:px-8 mx-auto rounded-xl w-full">
+<div class="mx-auto min-h-[calc(100dvh-theme(space.15))] w-full max-w-md rounded-xl p-4 pt-40 lg:px-8">
   <%= live_render(@conn, GitsWeb.AuthLive) %>
 </div>
-<.footer />
