--- a/lib/gits_web/live/storefront_live/event_listing.html.heex
+++ b/lib/gits_web/live/storefront_live/event_listing.html.heex
@@ -5,7 +5,7 @@
     </div>
   </div>
 
-  <div class="lg:sticky bg-white p-2 lg:top-20">
+  <.form for={@form} class="lg:sticky bg-white p-2 lg:top-20" phx-submit="get_tickets">
     <div class="grid gap-4">
       <div :if={false} class="flex items-center gap-4">
         <span class="inline-flex items-center rounded-md bg-blue-50 px-2 py-1 text-xs font-medium text-blue-700 ring-1 ring-inset ring-blue-700/10">
@@ -26,15 +26,29 @@
           <span>R 50.00</span>
         </div>
         <button
-          phx-click={
-            JS.patch(~p"/events/#{@event.public_id}/order") |> show_modal("order-tickets")
-          }
-          class="w-full rounded-lg bg-zinc-950 p-4 text-zinc-50"
+          disabled={not @verified?}
+          class="w-full rounded-lg bg-zinc-950 p-4 text-zinc-50 disabled:bg-zinc-700"
         >
           <span class="font-semibold">Get tickets</span>
         </button>
       </div>
-      <div :if={false} class="grid gap-4">
+
+      <Turnstile.widget events={[:success]} />
+
+      <div class="flex flex-wrap gap-4">
+        <!-- https://miafrica.net/event-categories-a-comprehensive-guide-to-understanding-types-of-events/ -->
+        <span
+          :for={i <- ["18+ Only", "Seminar"]}
+          class="inline-flex items-center gap-x-1.5 rounded-md px-2 py-1 text-xs font-medium text-gray-900 ring-1 ring-inset ring-gray-200"
+        >
+          <svg class="h-1.5 w-1.5 fill-zinc-900" viewBox="0 0 6 6" aria-hidden="true">
+            <circle cx="3" cy="3" r="3" />
+          </svg>
+          <%= i %>
+        </span>
+      </div>
+
+      <div class="grid gap-4">
         <div class="flex items-start gap-2">
           <.icon name="hero-clock" class="size-5" />
           <div class="grid text-zinc-700">
@@ -71,21 +85,9 @@
             </ul>
           </div>
         </div>
-        <div class="flex flex-wrap gap-4">
-          <!-- https://miafrica.net/event-categories-a-comprehensive-guide-to-understanding-types-of-events/ -->
-          <span
-            :for={i <- ["18+ Only", "Seminar"]}
-            class="inline-flex items-center gap-x-1.5 rounded-md px-2 py-1 text-xs font-medium text-gray-900 ring-1 ring-inset ring-gray-200"
-          >
-            <svg class="h-1.5 w-1.5 fill-zinc-900" viewBox="0 0 6 6" aria-hidden="true">
-              <circle cx="3" cy="3" r="3" />
-            </svg>
-            <%= i %>
-          </span>
-        </div>
       </div>
     </div>
-  </div>
+  </.form>
   <div class="grid gap-2 p-2">
     <h3 class="text-lg font-medium">About this event</h3>
     <div :if={false} class="space-y-2 text-zinc-700">
