--- a/lib/gits_web/live/storefront_live/event_listing.html.heex
+++ b/lib/gits_web/live/storefront_live/event_listing.html.heex
@@ -6,7 +6,11 @@
   </div>
 
   <.form for={@form} class="lg:sticky bg-white p-2 lg:top-20" phx-submit="get_tickets">
-    <Turnstile.widget events={[:success]} class="absolute bottom-0 z-50" />
+    <Turnstile.widget
+      events={[:success]}
+      class="absolute bottom-0 z-50"
+      appearance="interaction-only"
+    />
     <div class="grid gap-4">
       <div :if={false} class="flex items-center gap-4">
         <span class="inline-flex items-center rounded-md bg-blue-50 px-2 py-1 text-xs font-medium text-blue-700 ring-1 ring-inset ring-blue-700/10">
