use oban for emails

--- a/lib/gits_web/components/layouts/host_panel.html.heex
+++ b/lib/gits_web/components/layouts/host_panel.html.heex
@@ -3,7 +3,7 @@
   <header class="flex items-center w-full divide-x">
     <div class="flex pr-2">
       <button
-        phx-click="close"
+        onclick="history.back()"
         class="inline-flex border size-9 items-center justify-center rounded-lg"
       >
         <.icon name="i-lucide-x" />
