--- a/lib/gits_web/components/layouts/not_found.html.heex
+++ b/lib/gits_web/components/layouts/not_found.html.heex
@@ -1,8 +1,8 @@
 <.header />
 <div class="min-h-[calc(100dvh-10rem)] flex mx-auto max-w-screen-xl p-2 flex-col items-start gap-4 justify-center">
-  <h1 class="text-8xl font-bold text-black/10">401</h1>
+  <h1 class="text-8xl font-bold text-black/10">404</h1>
   <p class="text-sm text-zinc-700 font-medium">
-    Sorry, you don't have permission to access to this page. Please check your credentials and try again.
+    Sorry, we couldn't find the page you're looking for.
   </p>
   <div class="flex gap-2 items-center">
     <button
