--- a/lib/gits_web/live/storefront_live/event_listing.html.heex
+++ b/lib/gits_web/live/storefront_live/event_listing.html.heex
@@ -5,7 +5,10 @@
     </div>
   </div>
 
-  <.form for={@form} class="lg:sticky bg-white p-2 lg:top-20" phx-submit="get_tickets">
+  <.form :let={f} for={@form} class="lg:sticky bg-white p-2 lg:top-20" phx-submit="get_tickets">
+    <.inputs_for :let={ef} field={f[:order]}>
+      <.input :if={@current_user} type="hidden" value={@current_user.email} field={ef[:email]} />
+    </.inputs_for>
     <Turnstile.widget
       :if={@live_action == :index}
       events={[:success]}
