--- a/lib/gits_web/live/storefront_live/event_listing.html.heex
+++ b/lib/gits_web/live/storefront_live/event_listing.html.heex
@@ -112,8 +112,7 @@
   on_cancel={JS.patch(Routes.storefront_event_listing_path(@socket, :index, @event.public_id))}
 >
   <.live_component
-    :if={@live_action == :order}
-    id="order-component"
+    id={@order_id}
     data-show={show_modal("order-tickets")}
     module={GitsWeb.StorefrontLive.OrderComponent}
     event_id={@event.public_id}
